# vision-rpa-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run_agent.py
.claude/: settings.json
.claude/skills/: agent-loop.md  agent-memory.md  browser-rpa.md  desktop-rdp.md  extraction-pipeline.md  hitl-recovery.md  on-prem-inference.md  poc-cases.md  testing-patterns.md
agent/: audit.py  llm_client.py  loop.py  perception.py  planner.py  recovery.py  redaction.py  router.py  schemas.py
agent/providers/: __init__.py  base.py  claude_provider.py  legacy_adapter.py  ollama_provider.py  openai_provider.py
config/: logging_config.py  settings.py
config/locators/: rdweb.py
config/tasks/: case1_allstate_fixture.yaml  case1_already_closed.yaml  case1_full_flow.yaml  case2_full_flow.yaml  claim_search.yaml  extract_pdf.yaml  form_fill.yaml  login.yaml  phase1_live.yaml  rdp_launch.yaml  sim_live_iim.yaml  sim_live_lossdraft.yaml  sim_live_rdweb.yaml  smoke_test.yaml
docs/: README.md  architecture-hybrid-runtime.md  architecture.md  assumptions.md  case1-runbook.md  case1-workflow-analysis.md  demo-script.md  dependencies.md  feasibility-analysis.md  floating-ui.md  hitl-guidance-system.md  roadmap.md  runbook.md  sop-driven-migration.md  tech-stack.md  todo.md  vm-setup.md
docs/sop/: README.md  case1-already-closed-rule.md  case1-claim-validation.md  case1-cross-verify.md  case1-document-management.md  case1-loss-drafts-launch.md  case1-pdf-extraction.md  case2-claim-search.md  case2-document-management.md  case2-evaluate.md  case2-iim-fallback.md  case2-multi-select.md  case2-ocr-extract.md  case2-pdf-capture.md  case2-stage-bridges.md  example-lossdraft.md  sim-rdweb-login.md
executors/: browser.py  case1_tool.py  desktop.py  extraction.py  file_ops.py  rdp.py  selectors.py
hitl/: floating_window.py  queue.py  runner.py  server.py
memory/: ingest_sop.py  knowledge.py  session.py  sop_loader.py  working.py
scripts/: show_last_case1_result.py  show_loop_trace.py
tests/: conftest.py  test_browser_integration.py  test_desktop.py  test_e2e_full.py  test_error_injection.py  test_excel.py  test_extraction.py  test_file_ops.py  test_hitl_queue.py  test_hitl_runner.py  test_hitl_server.py  test_human_guidance.py  test_knowledge.py  test_loop.py  test_loop_deterministic.py  test_loop_recovery.py  test_multi_agent.py  test_parity_case1.py  test_perception.py  test_performance.py  test_planner.py  test_providers.py  test_rdp.py  test_recovery.py  test_router.py  test_router_phase3.py  test_runtime_ui.py  test_schemas.py  test_selectors.py  test_session_phase2.py  test_smoke.py  test_sop_memory.py  test_workflow_stages.py
tests/fixtures/: mock_browser.py  mock_desktop.py  mock_llm.py  mock_session.py
tests/sim/pages/: claim_search.html  form.html  login.html
