[tool.poetry]
name = "vision-rpa-agent"
version = "0.1.0"
description = "On-premises vision-driven RPA agent for insurance claim automation"
authors = ["Amarnatha Gowda T <amarnath1413@gmail.com>"]
readme = "README.md"
packages = [
    { include = "agent" },
    { include = "executors" },
    { include = "memory" },
    { include = "hitl" },
    { include = "config" },
]

[tool.poetry.dependencies]
python      = "^3.11"

# ── On-prem LLM client (Ollama dev / vLLM prod — OpenAI-compatible) ──
openai      = "^1.30"

# ── Browser automation (primary executor — LD + IIM are browser-based) ──
playwright  = "^1.44"

# ── Desktop / Windows automation (RDP window + File Explorer only) ─────
pywinauto   = "^0.6.8"
pygetwindow = "^0.0.9"

# ── Screen capture ────────────────────────────────────────────────────
mss         = "^9.0"
Pillow      = "^10.0"

# ── PDF and OCR ───────────────────────────────────────────────────────
pdfplumber  = "^0.11"
PyMuPDF     = "^1.24"
pytesseract = "^0.3.10"

# ── Data handling ─────────────────────────────────────────────────────
openpyxl    = "^3.1"
pandas      = "^2.0"
rapidfuzz   = "^3.0"

# ── Memory / storage ──────────────────────────────────────────────────
# chromadb is installed only when needed (Phase 4) via the "phase4" extra:
#   poetry install --with phase4
# Kept out of the default set because onnxruntime (its transitive dep) has
# no wheel for some Python/OS combos (e.g. macOS x86_64 + py3.11) and would
# block the rest of the install.

# ── Config / validation ───────────────────────────────────────────────
pydantic          = "^2.0"
pydantic-settings = "^2.0"
python-dotenv     = "^1.0"
PyYAML            = "^6.0"

# ── HITL web server ───────────────────────────────────────────────────
fastapi          = "^0.111"
uvicorn          = { extras = ["standard"], version = "^0.30" }
jinja2           = "^3.1"
python-multipart = "^0.0.9"

# ── Logging ───────────────────────────────────────────────────────────
structlog = "^24.0"
rich      = "^13.0"

# ── Utilities ─────────────────────────────────────────────────────────
tenacity = "^8.0"
httpx    = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest            = "^8.0"
pytest-asyncio    = "^0.23"
pytest-mock       = "^3.12"
pytest-playwright = "^0.5"
black             = "^24.0"
ruff              = "^0.4"
mypy              = "^1.10"

[tool.poetry.group.phase4]
optional = true

[tool.poetry.group.phase4.dependencies]
chromadb = "^0.5"

[tool.poetry.group.demo]
optional = true

[tool.poetry.group.demo.dependencies]
# Anthropic Claude API — demo/testing only (LLM_PROVIDER=claude).
# NEVER install this group in production; production uses Ollama/vLLM only.
#   poetry install --with demo
anthropic = "^0.40"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version      = "3.11"
strict              = false
ignore_missing_imports = true
warn_return_any     = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
addopts      = "-v --tb=short"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
